general enhancements #14, enhance fqcn